# AvatarProxy

./: CMakeLists.txt  LICENSE  README.md  main.cpp  proxy_logs.txt  start.bat  start.sh
src/network/: proxy_server.cpp  proxy_server.h
src/protocol/: packet_parser.cpp  packet_parser.h
